fixed lists line spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -117,7 +117,10 @@ ul {
   list-style: none;
   margin-top: .5rem;
   margin-bottom: .5rem;
-  line-height: 1.45;
+}
+
+li {
+  margin-bottom: .25rem;
 }
 
 ul li::marker {
@@ -293,8 +296,8 @@ textarea {
   align-content: flex-end
 }
 
-.titleList {
-  line-height: 1.8;
+.titleList li {
+  margin-bottom: .75rem;
 }
 
 .footnote-definition {
